KUBE/Eks/Ingress-Applications/app3-react-java-mysql/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: avejlanjekar45/react-java-mysql-backend
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: db-password
              mountPath: /run/secrets/db-password
              subPath: MYSQL_ROOT_PASSWORD

      volumes:
        - name: db-password
          secret:
            secretName: app3-secret
