KUBE/Eks/Ingress-Applications/app3-react-java-mysql/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: avejlanjekar45/react-java-mysql-frontend
          ports:
            - containerPort: 80
