KUBE/Eks/Ingress-Applications/app3-react-java-mysql/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-frontend-service
  namespace: app3
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
