KUBE/Eks/Ingress-Applications/app3-react-java-mysql/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app3-ingress
  namespace: app3
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/transforms.app3-backend-service: >
      [{"type":"url-rewrite","urlRewriteConfig":{"rewrites":[{"regex":"^/api$","replace":"/"}]}}]

spec:
  ingressClassName: alb
  rules:
    - host: app3.avej.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: app3-backend-service
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: app3-frontend-service
                port:
                  number: 80
